--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,175 +4,145 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="30dp"
-    tools:context="RegisterActivity">
+    android:padding="20dp"
+    tools:context=".RegisterActivity">
+
     <TextView
-        android:id="@+id/Signin"
+        android:id="@+id/Register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Let's Sign you in"
+        android:layout_marginTop="30dp"
+        android:text="Lets Register"
+        android:textSize="45dp"
         android:textStyle="bold"
-        android:textSize="30dp"
-        android:layout_marginTop="10dp"
-        android:paddingTop="50dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
-        android:id="@+id/Welcome"
+        android:id="@+id/Account"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Welcome Back ,"
+        android:text="Account"
+        android:textSize="45dp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@id/Register"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/Register" />
+
+    <TextView
+        android:id="@+id/Hello"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="20dp"
+        android:text="Hello user, you have"
         android:textSize="25dp"
-        android:layout_marginTop="15dp"
-        app:layout_constraintTop_toBottomOf="@+id/Signin"
-        app:layout_constraintStart_toEndOf="parent"
-        />
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@id/Account"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/Account" />
+
     <TextView
-        android:id="@+id/Miss"
+        android:id="@+id/Journey"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="You have been missed"
-        android:textStyle="bold"
+        android:text="a greatful journey"
         android:textSize="25dp"
-        android:layout_marginTop="12dp"
-        app:layout_constraintTop_toBottomOf="@+id/Welcome"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@id/Hello"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/Hello" />
+
+    <EditText
+        android:id="@+id/Name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:hint="Name"
+        android:inputType="textPersonName"
+        android:textSize="20dp"
         app:layout_constraintStart_toEndOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/Journey" />
+
+    <EditText
+        android:id="@+id/Businessname"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Business name"
+        android:inputType="textPersonName"
+        android:textSize="20dp"
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Name" />
+
+    <EditText
+        android:id="@+id/Phone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Phone"
+        android:inputType="phone"
+        android:textSize="20dp"
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Businessname" />
+
     <EditText
         android:id="@+id/Email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="Email"
         android:inputType="textEmailAddress"
-        android:hint="Email ,phone or username"
         android:textSize="20dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/Miss"
-        app:layout_constraintStart_toEndOf="parent"/>
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Phone" />
+
     <EditText
         android:id="@+id/Password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
         android:hint="Password"
+        android:inputType="textPassword"
         android:textSize="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/Email"
-        app:layout_constraintStart_toEndOf="parent"/>
-    <TextView
-        android:id="@+id/forgotPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Forgot Password?"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        android:textAlignment="textEnd"
         app:layout_constraintStart_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Password"/>
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/signinButton"
+        app:layout_constraintTop_toBottomOf="@+id/Email" />
+
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/Signupbutton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Sign in"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        android:textColor="@color/white"
-        android:textAllCaps="false"
-        android:backgroundTint="#673AB7"
-        android:layout_marginTop="30dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/forgotPassword"/>
-    <View
-        android:id="@+id/line1"
-        android:layout_width="250dp"
-        android:layout_height="3dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="15dp"
-        android:background="@color/black"
-        android:backgroundTint="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/signinButton"
-        app:layout_constraintTop_toBottomOf="@+id/signinButton"/>
-    <TextView
-        android:id="@+id/or"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:text="or"
-        android:textStyle="bold"
-        android:textSize="25dp"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        app:layout_constraintStart_toEndOf="@+id/line1"
-        app:layout_constraintTop_toBottomOf="@+id/signinButton" />
-
-    <View
-        android:id="@+id/line2"
-        android:layout_width="150dp"
-        android:layout_height="3dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="15dp"
-        android:background="@color/black"
-        android:backgroundTint="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/or"
-        app:layout_constraintTop_toBottomOf="@id/signinButton" />
-    <ImageView
-        android:id="@+id/google"
-        android:layout_width="35dp"
-        android:layout_height="30dp"
-        android:layout_marginEnd="16dp"
-        android:src="@drawable/img_1"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="70dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/or" />
-    <ImageView
-        android:id="@+id/facebook"
-        android:layout_width="35dp"
-        android:layout_height="30dp"
-        android:layout_marginEnd="16dp"
-        android:src="@drawable/img_2"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="120dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/or" />
-    <ImageView
-        android:id="@+id/apple"
-        android:layout_width="40dp"
-        android:layout_height="35dp"
-        android:layout_marginEnd="16dp"
-        android:src="@drawable/img_4"
-        android:layout_marginTop= "25dp"
-        android:layout_marginStart="160dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/or"/>
-    <TextView
-        android:id="@+id/donthaveAccount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/google"
-        android:text="Already have an account?"
-        android:textSize="20dp"
-        android:layout_marginStart="20dp"
+        android:layout_height="50dp"
         android:layout_marginTop="40dp"
-        android:textAlignment="center"/>
+        android:backgroundTint="#5E4A80"
+        android:text="Sign Up"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@id/Password"
+        app:layout_constraintTop_toBottomOf="@id/Password" />
+
+    <TextView
+        android:id="@+id/Account2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="45dp"
+        android:text="Already have an account?"
+        android:textAlignment="center"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/Signupbutton" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="37dp"
         android:backgroundTint="@color/white"
         android:text="Login"
         android:textAllCaps="false"
         android:textColor="#1583B5"
         android:textSize="20dp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.318"
-        app:layout_constraintStart_toEndOf="@id/donthaveAccount"
-        app:layout_constraintTop_toBottomOf="@id/apple" />
+        app:layout_constraintStart_toEndOf="@id/Account2"
+        app:layout_constraintTop_toBottomOf="@id/Signupbutton" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
